fix width of content__list-container and gap between checkboses and their lable

--- a/styles/style.css
+++ b/styles/style.css
@@ -145,7 +145,7 @@ ol {
 .search-form__label {
   display: flex;
   align-items: center;
-  column-gap: 1.5px;
+  column-gap: 5px;
   width: fit-content;
 }
 
@@ -181,7 +181,7 @@ ol {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  column-gap: 20px;
+  column-gap: 15px;
 }
 
 .search-form__pseudo-checkbox {
@@ -245,6 +245,7 @@ ol {
   display: flex;
   flex-direction: column;
   row-gap: 30px;
+  min-width: 399px;
   height: 298px;
   padding: 2px 3px;
   overflow-y: auto;
